[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Shao Wei <lshaowei18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# The double square brackets is an array in TOML's syntax
# We can only have 1 library in a project, but we can have multiple binaries.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
