[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Shao Wei <lshaowei18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# The double square brackets is an array in TOML's syntax
# We can only have 1 library in a project, but we can have multiple binaries.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.3"
serde = "1.0.124"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    # tells sqlx to use the actix runtime for its futures & rustls as TLS backend
    "runtime-actix-rustls",
    # gives access to sqlx::query! and sqlx::query_as!
    "macros",
    # unlocks Postgres-specific functionality
    "postgres",
    # Maps SQL UUIDs to the Uuid type from the uuid crate
    "uuid",
    # Access to the functions used under the hood by sqlx-cli to manage migrations
    "migrate",
]